.fair/logs/job_2024-06-13_14_48_32_786055.log
--------------------------------
 Commenced = Thu Jun 13 14:48:32 2024 
 Author    = David McGuinness <david.mcguinness.2@glasgow.ac.uk>
 Command   = /home/davidmcguinness/.fair/data/jobs/2024-06-13_14_48_32_786055/script.sh
--------------------------------
  File "/media/davidmcguinness/extradrive2/Data_Analysis/FAIR_data_pipeline/FairDataPipepline/Image_and_Script/simple_analysis.py", line 17
    ----
        ^
SyntaxError: invalid syntax
------- time taken 0:00:00.142343 -------
